2010-10-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Integrated library PHP_JPEG_Metadata_Toolkit to retrieve XMP metadata (PDF files)

2010-09-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed PHP Warning: Invalid argument supplied for foreach()

2010-08-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.3.0 (beta)
	* Updated documentation with additional examples

2010-08-16  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.2.0
	* Added geolocation (latitude/longitude/altitude) on sample picture wbtc05.jpg
	* Enhanced debugging information

2010-03-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Added support for dynamically generated file name (thanks to Georg Ringer)
	* Updated documentation

2009-03-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Added support for external tools

2008-07-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Initial release